--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="./controller.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio</title>
+  <link rel="icon" href="./logo.ico" />
+
 </head>
 
 <body>
